# genetictabler

./: .deepsource.toml  .gitattributes  .gitignore  .~lock.Gene.py#  CHANGELOG.md  CHANGELOG.txt  Genetic Algorithm.py  Genetic.py  LICENSE  README.md  TimeTable_Problem.py  base.py  genetictabler_gui.py  info.txt  main.py  pyproject.toml  schedule.py  setup.py  test.py  tests.py
.devcontainer/: devcontainer.json
.github/workflows/: autoyapf.yml  tests.yml
genetictabler/: __init__.py  config.py  encoding.py  engine.py  export.py  fitness.py  genetic.py  queries.py  timetable.py  types.py  utils.py  validation.py
