[project]
name = "genetictabler"
version = "3.0.0"
description = "Generate conflict-free school and university timetables using a genetic algorithm"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Dipan Nanda", email = "d19cyber@gmail.com"},
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "streamlit>=1.32.0",
]

[project.urls]
"Source Code" = "https://github.com/themagicalmammal/genetictabler"
"Bug Tracker" = "https://github.com/themagicalmammal/genetictabler/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genetictabler"]

# ── Ruff (primary linter — replaces flake8 + isort + pyupgrade + more) ──
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # let formatter handle line length

[tool.ruff.lint.per-file-ignores]
"tests.py" = ["E501"]
"genetictabler_gui.py" = ["E501"]

# ── MyPy (static type checking) ──
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

# ── Pytest ──
[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["tests.py"]
python_classes = ["Test*"]
python_functions = []
addopts = "-v --tb=short"
